-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.6.0, 5.7.0 Alpha
-
None
-
de0212e51e65b578bc941c1004914a0c33c06da7
If I set accent colour and try to use colour of text selection (which created from accent) in popup and it's children, I'll got wrong colour.
import QtQuick 2.6 import Qt.labs.controls 1.0 import Qt.labs.controls.material 1.0 ApplicationWindow { id: main visible: true width: 640 height: 480 Material.accent: Material.Blue Rectangle { anchors.fill: parent color: Material.textSelectionColor } Popup { id: popup width: 200 height: 200 contentItem: Label { color: popup.Material.textSelectionColor text: "Test text" font.pixelSize: 26 } Component.onCompleted: open() } Popup { width: 200 height: 200 x: main.width - width y: main.height - height contentItem: Label { color: Material.textSelectionColor text: "Test text" font.pixelSize: 26 } Component.onCompleted: open() } }
| For Gerrit Dashboard: QTBUG-52631 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 156075,4 | Material: update palette on primary/accent color change | 5.6 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
| 172565,2 | Fix style inheritance | 5.7 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |