Material: update palette on primary/accent color change

Task-number: QTBUG-52631
Change-Id: Ib1649f44cdbc14770b1759ef7f4d7ea92f148cc1
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>