src/imports/controls/material/qquickmaterialstyle.cpp
@@ -525,6 +525,7 @@ void QQuickMaterialStyle::inheritPrimary(uint primary, bool custom)
         m_primary = primary;
         propagatePrimary();
         emit primaryChanged();
+        emit paletteChanged();
     }
 }
 
@@ -595,6 +596,7 @@ void QQuickMaterialStyle::inheritAccent(uint accent, bool custom)
         m_accent = accent;
         propagateAccent();
         emit accentChanged();
+        emit paletteChanged();
     }
 }
 
